test/corpus/constraint_formal_equation.sdm
===========================
Constraint, formal equation
===========================

module Example is

  structure Outer is

    inner -> string is
      assert not_empty is
        inner = "hello"
      end
    end

  end

end

---

(module
  (identifier)
  (module_body
    (definition
      (structure_def
        (identifier)
        (structure_body
          (member
            (member_def
              (identifier)
              (type_reference
                (builtin_simple_type))
              (annotation_only_body
                (annotation
                  (constraint
                    (identifier)
                    (formal_constraint
                      (constraint_sentence
                        (simple_sentence
                          (equation
                            (term
                              (identifier_reference
                                (identifier)))
                            (term
                              (predicate_value
                                (simple_value
                                  (string
                                    (quoted_string)))))))))))))))))))
