test/corpus/constraint_formal_less_than_or_equal.sdm
=====================================
Constraint, formal less than or equal
=====================================

module corpus_test_constraint is

  structure Outer is

    inner -> string is
      assert not_empty is
        inner <= "hello"
      end
    end

    inner_sym -> string is
      assert not_empty is
        inner ≤ "hello"
      end
    end

  end

end

---

(module
  (identifier)
  (module_body
    (definition
      (structure_def
        (identifier)
        (structure_body
          (member
            (member_def
              (identifier)
              (type_reference
                (builtin_simple_type))
              (annotation_only_body
                (annotation
                  (constraint
                    (identifier)
                    (formal_constraint
                      (constraint_sentence
                        (simple_sentence
                          (inequation
                            (term
                              (identifier_reference
                                (identifier)))
                            (op_less_than_or_equal)
                            (term
                              (predicate_value
                                (simple_value
                                  (string
                                    (quoted_string))))))))))))))
          (member
            (member_def
              (identifier)
              (type_reference
                (builtin_simple_type))
              (annotation_only_body
                (annotation
                  (constraint
                    (identifier)
                    (formal_constraint
                      (constraint_sentence
                        (simple_sentence
                          (inequation
                            (term
                              (identifier_reference
                                (identifier)))
                            (op_less_than_or_equal)
                            (term
                              (predicate_value
                                (simple_value
                                  (string
                                    (quoted_string)))))))))))))))))))
