test/corpus/constraint_informal.sdm
===========================
Constraint, informal string
===========================

module Example is
  assert no_definitions = "This module has no definitions"
end

---

(module
   (identifier)
   (module_body
     (annotation
       (constraint
         (identifier)
         (informal_constraint
           (quoted_string))))))
