test/corpus/constraint_informal_language.sdm
=========================================
Constraint, informal string with language
=========================================

module corpus_test_constraint is
  assert no_definitions = "This module has no definitions"@en
end

---

(module
   (identifier)
   (module_body
     (annotation
       (constraint
         (identifier)
         (informal_constraint
           (quoted_string)
           (controlled_language_tag))))))
