test/corpus/datatype_empty.sdm
================
Data Type, Empty
================

module campaign is

  datatype nameString <- xsd:string
  
end

---

(module
  name: (identifier)
  body: (module_body
          (data_type_def
            name: (identifier)
            base: (identifier_reference
               (qualified_identifier
                 module: (identifier)
                 member: (identifier))))))
