test/corpus/datatype_from_string.sdm
===========================
Data Type, From Simple Type
===========================

module example is

  datatype nameString <- string

end

---

(module
  name: (identifier)
  body: (module_body
    (definition
      (data_type_def
        name: (identifier)
        base: (builtin_simple_type)))))
