test/corpus/dimension_empty.sdm
================
Dimension, Empty
================

module corpus_test_dimension is

  dimension Campaigns

end

---

(module
  name: (identifier)
  body: (module_body
    (definition
      (dimension_def
        name: (identifier)))))
