test/corpus/dimension_with_identity.sdm
========================
Dimension, With Identity
========================

module corpus_test_dimension is

  dimension Campaigns is
    identity campaign -> CampaignId
  end

end

---

(module
  name: (identifier)
  body: (module_body
    (definition
      (dimension_def
        name: (identifier)
        body: (dimension_body
          identity: (entity_identity
            identity: (member
              (member_def
                name: (identifier)
                target: (type_reference
                  (identifier_reference
                    (identifier)))))))))))
