test/corpus/dimension_with_source.sdm
======================
Dimension, With Source
======================

module corpus_test_dimension is

  dimension Campaigns is
    source entity:Campaign
  end

end

---

(module
  name: (identifier)
  body: (module_body
    (dimension_def
      name: (identifier)
      body: (dimension_body
        identity: (source_entity
          entity: (identifier_reference
            (qualified_identifier
              module: (identifier)
              member: (identifier))))))))
